<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_news">Новости</string>
    <string name="news_load_error">Не удалось загрузит список новостей</string>

    <string name="title_filter">Фильтр</string>
    <string name="category_help">Категории помощи:</string>
    <string name="link_news_owner_mail"><u>Напишите нам</u></string>
    <string name="link_news_owner_web"><u>Перейти на сайт организации</u></string>
    <string name="help_things">Помочь\nвещами</string>
    <string name="help_volunteer">Стать\nволонтером</string>
    <string name="help_prof">Проф.\nпомощь</string>
    <string name="help_money">Помочь\nденьгами</string>
    <string name="questions_news">У вас есть вопросы?</string>
    <string name="temp_count_count">+102</string>
    <string name="filter_saved_toast">Фильтры успешно сохранены</string>
    <string name="no_news_available">Нет новостей, соответствующих выбранным фильтрам</string>
    <string name="news_detail_load_error">Не удалось загрузить новость</string>

    <string name="date_single">(%s)</string>
    <string name="date_range">(%s – %s)</string>
    <string name="event_upcoming">Осталось %s %s</string>
    <string name="event_today">Событие сегодня %s</string>
    <string name="event_finished">Событие завершено %s</string>

    <string name="tab_name_search_by_events">По мероприятиям</string>
    <string name="tab_name_search_by_nko">По НКО</string>
    <string name="hint_input_name_organization">Введите название организации</string>
    <string name="hint_input_title_event">Введите название мероприятия</string>

    <string name="title_help_dialog_fragment">Спасибо за решение помочь!</string>
    <string name="send_money">Перевести</string>
    <string name="cancel_money">Отмена</string>
    <string name="title_money_help_dialog_fragment">Выберите размер пожертвования</string>
    <string name="title_custom_money">или введите нужную сумму</string>
    <string name="input_custom_money">Введите сумму</string>

    <string name="money_sum_100">100 ₽</string>
    <string name="money_sum_500">500 ₽</string>
    <string name="money_sum_1000">1000 ₽</string>
    <string name="money_sum_2000">2000 ₽</string>

    <string name="notification_permission_required_title">Требуется разрешение</string>
    <string name="notification_permission_required_message">Для отправки уведомлений необходимо разрешение. Разрешите его в настройках приложения.</string>
    <string name="open_settings_button">Открыть настройки</string>
    <string name="cancel_settings_button">Отмена</string>
</resources>