<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_horizontal_popup_default">

    <TextView
        style="@style/PopupHeadingLargeBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_popup_header"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/title_help_dialog_fragment" />

    <TextView
        style="@style/PopupFieldTitleSmallMuted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_popup_field_title"
        android:text="@string/title_money_help_dialog_fragment" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/defaultMoneySum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_button_toggle_group"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMoneySumOneHundred"
            style="@style/ButtonTextToggleMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/money_sum_100" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMoneySumFiveHundred"
            style="@style/ButtonTextToggleMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/money_sum_500" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMoneySumOneThousand"
            style="@style/ButtonTextToggleMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/money_sum_1000" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMoneySumTwoThousand"
            style="@style/ButtonTextToggleMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/money_sum_2000" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        style="@style/PopupFieldTitleSmallMuted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_popup_field_title"
        android:text="@string/title_custom_money" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_text_input_layout"
        app:boxBackgroundColor="@color/white"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMoneySum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="9"
            android:hint="@string/input_custom_money"
            android:inputType="number"
            android:textColorHint="@color/black_38" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_top_popup_action_buttons"
        android:layout_marginBottom="@dimen/margin_bottom_popup_action_buttons"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buttonCancel"
            style="@style/BodyTextMediumBlackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_popup_cancel_button"
            android:enabled="true"
            android:text="@string/cancel_money"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/buttonSend"
            style="@style/BodyTextMediumBlackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/send_money"
            android:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>